css/style.css
/* ... */
/********************************
STARTING AT MAIN- GRADFLOW.HTML
********************************/
/* Add a black background color to the top navigation */
.gradflow-header {
	background-color: #333;
	overflow: hidden;
}

/* Style the links inside the navigation bar */
.gradflow-header a {
	float: left;
	color: #f2f2f2;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
	font-size: 17px;
	width: 100px;
}

/* Change the color of links on hover */
.gradflow-header a:hover {
	background-color: #ddd;
	color: black;
}

/* Add a color to the active/current link */
.gradflow-header a.active {
	background-color: #04AA6D;
	color: white;
}

.gradflow-header-right {
	float: right;
}

#btn-reset:hover {
	background-color: rgb(118, 21, 21);
	color: white;
}

.gradflow-main {
	flex: 1 1 auto;
}


.unselectable {
	-webkit-user-select: none;
	-moz-user-select: none;
	user-select: none;
}

.p5Canvas {
	-webkit-user-select: none;
	-moz-user-select: none;
	user-select: none;
}

/********************************
STARTING AT MAIN - ABOUT.HTML
********************************/
.about-main {
	display: flex;
	flex-grow: 1;
	flex-direction: column;
	justify-content: space-evenly;
	padding: clamp(.5rem, 2vw, 2.5rem);
	align-items: center;
	margin: 10px;
	text-align: center;
}

.about-main h1 {
	font-size: clamp(2.5rem, 5vw, 5.5rem);
}

.about-main h2 {
	margin-top: 10px;
	font-size: clamp(2rem, 3.5vw, 4.5rem);
}

.about-main p {
	font-size: clamp(1rem, 1.5vw, 3.5rem);

}

.about-card-container {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
	gap: 30px;
}

.person-card {
	text-align: center;
	margin: 10px;
	width: clamp(22rem, 25vw, 37rem);
	height: auto;
	padding: 10px;
}

.person-card h3 {
	font-size: clamp(1.5rem, 2vw, 3rem);
}

.person-card p {
	font-size: clamp(1rem, 1vw, 3.5rem);
}

.person-card .avatar {
	width: 100px;
	height: auto;
	align-self: center;
	border-radius: 50%;
	border: 3px solid black;
}

.person-card .avatar:hover {
	box-shadow: 0px 0px 10px 5px;
}

.person-card .avatar.alfredo:hover {
	color: rgb(225, 180, 143);
	border-color: rgb(225, 180, 143);
}

.person-card .avatar.andrew:hover {
	color: rgb(117, 221, 143);
	border-color: rgb(117, 221, 143);
}

.person-card .avatar.anthony:hover {
	color: rgb(147, 116, 217);
	border-color: rgb(147, 116, 217);
}

.person-card .avatar.daisy:hover {
	color: rgb(147, 116, 217);
	border-color: rgb(147, 116, 217);
}

.person-card .avatar.jacob:hover {
	color: rgb(225, 122, 197);
	border-color: rgb(225, 122, 197);
}

.person-card .avatar.brandon:hover {
	color: rgb(166, 219, 120);
	border-color: rgb(166, 219, 120);
}


@media screen and (min-width: 1000px) {
	.about-title {
		animation-duration: 3s;
		animation-name: slidein;
		overflow: hidden;
	}

	@keyframes slidein {
		from {
			margin-left: 100%;
			width: 300%;
		}

		to {
			margin-left: 0%;
			width: 100%;
		}
	}


	.about-desc1 {
		animation: fadeIn ease 7s;
		-webkit-animation: fadeIn ease 7s;
		-moz-animation: fadeIn ease 7s;
		-o-animation: fadeIn ease 7s;
		-ms-animation: fadeIn ease 7s;
	}

	@keyframes fadeIn {
		0% {
			opacity: 0;
		}

		100% {
			opacity: 1;
		}
	}

	@-moz-keyframes fadeIn {
		0% {
			opacity: 0;
		}

		100% {
			opacity: 1;
		}
	}

	@-webkit-keyframes fadeIn {
		0% {
			opacity: 0;
		}

		100% {
			opacity: 1;
		}
	}

	@-o-keyframes fadeIn {
		0% {
			opacity: 0;
		}

		100% {
			opacity: 1;
		}
	}

	@-ms-keyframes fadeIn {
		0% {
			opacity: 0;
		}

		100% {
			opacity: 1;
		}
	}

	.about-desc2 {
		animation-duration: 4s;
		animation-name: slideinRight;
		overflow: hidden;
	}

	@keyframes slideinRight {
		from {
			margin-right: 100%;
			width: 300%;
		}

		to {
			margin-right: 0%;
			width: 100%;
		}
	}

	.about-desc3 {
		animation-duration: 4s;
		animation-name: slideinBottom;
		overflow: hidden;
	}

	@keyframes slideinBottom {
		from {
			margin-top: 100%;
			width: 300%;
		}

		to {
			margin-top: 0%;
			width: 100%;
		}
	}
}

/********************************
STARTING AT MAIN - GRADMAP.HTML
********************************/

/* boilerplate css copied from about.html - feel free to modify! */
.finder-main {
	/*insert code here for GradMap css*/
	display: flex;
	flex-grow: 1;
	flex-direction: column;
	justify-content: center;
	text-align: center;
}

.finder-main h1 {
	font-size: clamp(2.5rem, 5vw, 5.5rem);
}

.finder-main h2 {
	font-size: clamp(2rem, 3.5vw, 4.5rem);
}

.finder-main p {
	font-size: clamp(1rem, 1.5vw, 3.5rem);
}

/********************************
			FOOTER
********************************/
.page-footer {
	display: flex;
	flex-direction: column-reverse;
	flex-grow: 0;
	padding: 0px 10px 5px 10px;
	color: black;
	z-index: 2;
}

.page-footer ul {
	display: flex;
}

.page-footer .logo {
	width: 40px;
	height: auto;
}

@media screen and (min-width: 550px) {
	.page-footer {
		flex-direction: row;
		justify-content: space-between;
		align-items: center;
	}

	.page-footer ul {
		margin-bottom: 0;
	}
}

/* map stuff */
#map {
	height: 45vh;
	width: 100w;
	z-index:0;
}

.marker {
	background-image: url('images/Flushy-Marker.png');
	background-size: cover;
	width: 50px;
	height: 50px;
	border-radius: 50%;
	cursor: pointer;
}

.mapboxgl-popup {
	max-width: 200px;
}

.mapboxgl-popup-content {
	text-align: center;
	font-family: 'Open Sans', sans-serif;
}

#geocoder {
	margin-bottom: 25px;
	position: relative;
	top: 10px;
	left: 600px;
	width: 600w;
}

.mapboxgl-ctrl-geocoder {
	min-width: 100%;
}

